[gd_scene load_steps=8 format=3 uid="uid://cs3icbkoc1y33"]

[ext_resource type="Script" uid="uid://sqeipdqjr8tp" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://t71mdw60osy8" path="res://assets/horror_forest_visual_novel_background (15).png" id="2_4hy44"]
[ext_resource type="FontFile" uid="uid://dc31kemth6wxu" path="res://assets/Ancientkeeper-Regular.ttf" id="2_ouk20"]

[sub_resource type="Shader" id="Shader_mae5d"]
code = "/* License CC BY-NC-SA 4.0 Deed */
/* https://creativecommons.org/licenses/by-nc-sa/4.0/ */
/* Fork of Ryk's VCR distortion shader */
/* https://www.shadertoy.com/view/ldjGzV */

shader_type canvas_item;

uniform sampler2D screen_texture: hint_screen_texture, filter_linear_mipmap, repeat_disable;

group_uniforms Image;
uniform float curvature: hint_range(0., 10., .01) = 2.;
uniform float skip: hint_range(0., 1., .01) = 1.;
uniform float image_flicker: hint_range(0., 1., .01) = 1.;

group_uniforms Vignette;
uniform float vignette_flicker_speed: hint_range(0., 2., .01) = 1.;
uniform float vignette_strength: hint_range(0., 2., 0.01) = 1.;

group_uniforms Scanlines;
uniform float small_scanlines_speed: hint_range(0., 10., .01) = 1.;
uniform float small_scanlines_proximity: hint_range(.01, 2., .01) = 1.;
uniform float small_scanlines_opacity: hint_range(0.01, 5., .01) = 1.;
uniform float scanlines_opacity: hint_range(0., 2., .01) = 1.;
uniform float scanlines_speed: hint_range(0., 5., .01) = 1.;
uniform float scanline_thickness: hint_range(0., .6, .01) = 0.5;
uniform float scanlines_spacing: hint_range(0.3, 3., .01) = 1.;

group_uniforms Noise;
uniform sampler2D noise_texture: filter_linear_mipmap, repeat_enable;

float noise(vec2 p, vec2 uv)
{
	float s = texture(noise_texture,vec2(1.*TIME,2.*TIME)*8. + p*1.).x;
	s *= s;
	return s;
}

float onOff(float a, float b, float c)
{
	return step(c, sin(TIME + a*cos(TIME*b)));
}

float ramp(float y, float start, float end)
{
	float inside = step(start,y) - step(end,y);
	float fact = (y-start)/(end-start)*inside;
	return (1.-fact) * inside;
}

float stripes(vec2 uv)
{
	float noi = noise(uv*vec2(0.5,1.) + vec2(1.,3.), uv)*scanlines_opacity;
	return ramp(mod(uv.y*4.*scanlines_spacing + TIME*scanlines_speed/(2.*scanlines_spacing)+sin(TIME*scanlines_speed + sin(TIME*scanlines_speed*0.63*scanlines_spacing)),1.),scanline_thickness,.6)*noi;
}

vec3 getVideo(vec2 uv)
{
	vec2 look = uv;
	float window = 1./(1.+20.*(look.y-mod(TIME/4.,1.))*(look.y-mod(TIME/4.,1.)))*image_flicker;
	look.x = look.x + sin(look.y*10. + TIME)/50.*onOff(4.,4.,.3)*(1.+cos(TIME*80.))*window;
	float vShift = 0.4*onOff(2.,3.,.9)*(sin(TIME)*sin(TIME*20.)+(0.5 + 0.1*sin(TIME*200.)*cos(TIME)))*skip;
	look.y = mod(look.y + vShift, 1.);
	vec3 video = texture(screen_texture,look).xyz;
	return video;
}

vec2 screenDistort(vec2 uv)
{
	uv -= vec2(.5,.5);
	uv = uv*1.2*(1./1.2+curvature*uv.x*uv.x*uv.y*uv.y);
	uv += vec2(.5,.5);
	return uv;
}

void fragment()
{
	vec2 uv = FRAGCOORD.xy / (1.0 / SCREEN_PIXEL_SIZE).xy;
	uv = screenDistort(uv);
	vec3 video = getVideo(uv);
	float vigAmt = 3.+.3*sin(TIME*vignette_flicker_speed+1. + 5.*cos(TIME*5.*vignette_flicker_speed+1.));
	vigAmt *= vignette_strength;
	float vignette = (1.-vigAmt*(uv.y-.5)*(uv.y-.5))*(1.-vigAmt*(uv.x-.5)*(uv.x-.5));

	video += stripes(uv);
	video += noise(uv*2., uv)/2.;
	video *= vignette;
	video *= (12./small_scanlines_opacity+mod(uv.y*30.*small_scanlines_proximity+TIME*small_scanlines_speed,1.))/13.*small_scanlines_opacity;

	COLOR = vec4(video,1.0);
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4hy44"]
frequency = 0.132

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4hy44"]
noise = SubResource("FastNoiseLite_4hy44")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l48gv"]
shader = SubResource("Shader_mae5d")
shader_parameter/curvature = 1.44
shader_parameter/skip = 0.25
shader_parameter/image_flicker = 1.0
shader_parameter/vignette_flicker_speed = 1.0
shader_parameter/vignette_strength = 1.0
shader_parameter/small_scanlines_speed = 1.0
shader_parameter/small_scanlines_proximity = 1.0
shader_parameter/small_scanlines_opacity = 1.0
shader_parameter/scanlines_opacity = 1.0
shader_parameter/scanlines_speed = 1.0
shader_parameter/scanline_thickness = 0.5
shader_parameter/scanlines_spacing = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_4hy44")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="HorrorForestVisualNovelBackground(15)" type="Sprite2D" parent="."]
position = Vector2(-67, -75)
scale = Vector2(0.444368, 0.487132)
texture = ExtResource("2_4hy44")
centered = false

[node name="Label" type="Label" parent="."]
offset_left = 211.0
offset_top = 37.0
offset_right = 644.0
offset_bottom = 310.0
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 300
text = "MIRE"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_l48gv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1153.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 760.0
offset_top = 477.0
offset_right = 1098.0
offset_bottom = 606.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"
placeholder_text = "IP"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "9999"
placeholder_text = "Port"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Host"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Join"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextEdit2" to="." method="_on_text_edit_2_text_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
